@@ -2,3 +2,4 @@
 # Shell language are included here.
 util/grub.d/10_kfreebsd.in
 util/grub.d/10_linux.in
+util/grub.d/10_netbsd.in
